[tool.poetry]
name = "dr-hatespeech"
version = "0.0.1"
description = "Hatespeech detection for DR Facebook data."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
    "Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
jupyterlab = "^3.4.2"
datasets = "^2.2.2"
snorkel = "^0.9.8"
pandas = "^1.3.0"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"
matplotlib = "^3.5.2"
scikit-learn = "^0.24.2"
scipy = "^1.8.1"
torch = "^1.10.0"
transformers = "^4.18.0"
accelerate = "^0.10.0"
protobuf = "3.20.0"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pre-commit = "^2.17.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ['--verbose',
           '--durations=10',
           '--color=yes',
           '-s',
           '-vv',
           '--doctest-modules']
xfail_strict = true
filterwarnings = ["ignore"]
log_cli_level = "info"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"
