[tool.poetry]
name = "hatespeech"
version = "0.0.1"
description = "Hatespeech detection based on Facebook data."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
    "Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hydra-core = "^1.2.0"
datasets = "^2.3.2"
fastparquet = "^0.8.1"
protobuf = "^4.21.6"
transformers = "^4.38.0"
torch = "^1.13.1"
ipywidgets = "^7.7.1"
matplotlib = "^3.5.2"
snorkel = {git = "https://github.com/saattrupdan/snorkel", rev = "main"}
wget = "^3.2"
joblib = "^1.2.0"
scikit-learn = "^1.0.0"
Werkzeug = "^2.2.3"
wheel = "^0.38.1"
Pillow = "^9.3.0"
jupyter-core = "^4.11.2"
redis = "^4.5.4"
ipython = "^8.10"
oauthlib = "^3.2.2"
cryptography = "^42.0.4"
certifi = "^2023.7.22"
pytest = "^7.2.0"
lxml = ">=4.9.0,<4.9.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pdoc = "^7.1.1"
pytest = "^7.1.2"
pre-commit = "^2.17.0"
pytest-xdist = "^2.5.0"
pytest-cov = "^3.0.0"
readme-coverage-badger = ">=0.1.2,<1.0.0"
label-studio = "^1.5.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '-n 2',
    '--cov=src/hatespeech',
]
xfail_strict = true
filterwarnings = ["ignore"]
log_cli_level = "info"
testpaths = ["tests", "src/hatespeech"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"
